# OOP2_2

./: README.md  readme.md
01_cmake/: CMakeLists.txt  main.cpp
02_tdd/: CMakeLists.txt
02_tdd/include/: TextWrapper.h
02_tdd/src/: Dummy.cpp  TextWrapper.cpp  main.cpp
02_tdd/test/: CMakeLists.txt
02_tdd/test/src/: TextWrapperTest.cpp
